--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,15 +1,17 @@
 .footer {
-    min-height: 100px;
-    background: hotpink;
-    position: relative;
-  }
-  
-  .footer span {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 3px;
-    background:black;
-  }
-  
+  background: #F18D9E;
+  border-top: 7px solid #5BC8AC;
+  box-shadow: 0px 0px 10px #5BC8AC;
+  position: sticky;
+  color: white;
+  overflow: auto;
+  height: 90px;
+}
+
+.footer > .footerBackground  {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #F18D9E;
+}
