--- a/src/components/Wrapper/wrapper.css
+++ b/src/components/Wrapper/wrapper.css
@@ -1,5 +1,11 @@
 .wrapper {
+    min-height: 70%;
+    width: 70%;
+    justify-content: center;
     display: flex;
     flex-wrap: wrap;
-    justify-items: center;
+    margin: 0 auto;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
+
