--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,13 @@
     transform: rotate(360deg);
   }
 }
+
+. {
+  box-sizing: border-box;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  height: 100%;
+}
