--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,17 +1,35 @@
+/* https://css-tricks.com/tinted-images-multiple-backgrounds/ */
+
 .footer {
+  clear: both;
+  margin-top: auto;
+  padding: 30px;
   background: #F18D9E;
   border-top: 7px solid #5BC8AC;
-  box-shadow: 0px 0px 10px #5BC8AC;
-  position: sticky;
+  box-shadow: 0px -3px 14px 0px #5BC8AC;
+  height: 100px;
+  position:sticky; 
+  bottom:0;
   color: white;
-  overflow: auto;
-  height: 90px;
 }
 
-.footer > .footerBackground  {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: #F18D9E;
+#appName {
+  color: white;
+  text-align: right;
+  vertical-align: middle;
+  font-size: 35px;
+  font-weight: 900;
+  font-family: 'Poiret One', cursive;
+  
 }
+  
+/* background: #F18D9E; 
+footer {
+    clear: both;
+    margin-top: auto;
+    background: #666666;
+    padding: 20px;
+    border-top: 7px solid #4aaaa5;
+}
+
+*/
