--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,16 +1,29 @@
 .header {
     background: #F18D9E;
     font-size: 20px;
-    color: white;
     border-bottom: 7px solid #5BC8AC;
-    box-shadow: 0 11px 6px -6px #5BC8AC;
+    box-shadow: 0px 11px 6px -6px #5BC8AC;
+    overflow: hidden;
     text-align: center;
     padding: 20px;
     position: relative;
     height: auto;
+    margin-bottom: 40px;
   }
 
-  h1 {
-      color: black;
+  h2 {
+    font-family: 'Poiret One', cursive;
+    color: white;
+    font-weight: 500;
   }
   
+  /*
+
+  header {
+    background: #ffffff;
+    border-bottom: 2px solid #cccccc;
+    overflow: hidden;
+    margin-bottom: 40px;
+}
+
+  */
