--- a/src/components/Wrapper/wrapper.css
+++ b/src/components/Wrapper/wrapper.css
@@ -1,11 +1,9 @@
 .wrapper {
-    min-height: 70%;
-    width: 70%;
+    min-height: 60%;
+    width: 100%;
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
-    margin: 0 auto;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    margin-bottom: 40px;
+    margin-top: 40px;
 }
-
