--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,26 +1,20 @@
 /* https://css-tricks.com/tinted-images-multiple-backgrounds/ */
 
 .footer {
-  clear: both;
-  margin-top: auto;
-  padding: 30px;
   background: #F18D9E;
   border-top: 7px solid #5BC8AC;
   box-shadow: 0px -3px 14px 0px #5BC8AC;
-  height: 100px;
-  position:sticky; 
-  bottom:0;
-  color: white;
+  display: inline-flex;
+  width: 100%;
+  flex-wrap: nowrap;
+  justify-content: space-evenly; 
 }
 
 #appName {
   color: white;
-  text-align: right;
-  vertical-align: middle;
   font-size: 35px;
   font-weight: 900;
   font-family: 'Poiret One', cursive;
-  
 }
   
 /* background: #F18D9E; 
