--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,21 +1,37 @@
-.header {
+  #headerContainer {
     background: #F18D9E;
-    font-size: 20px;
     border-bottom: 7px solid #5BC8AC;
     box-shadow: 0px 11px 6px -6px #5BC8AC;
-    overflow: hidden;
-    text-align: center;
-    padding: 20px;
-    position: relative;
-    height: auto;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+    display: inline-flex;
+    width: 100%;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    padding: 10px 10px;
   }
 
-  h2 {
-    font-family: 'Poiret One', cursive;
+  #brand {
     color: white;
-    font-weight: 500;
+    font-size: 55px;
+    font-weight: 900;
+    font-family: 'Poiret One', cursive;
   }
+
+  #alert {
+    color: white;
+    font-size: 25px;
+    font-weight: 900;
+    font-family: 'Source Sans Pro', sans-serif;
+    padding-top: 25px;
+  }
+
+    #scoreBoard {
+      color: white;
+      font-size: 35px;
+      font-weight: 900;
+      font-family: 'Poiret One', cursive;
+      padding-top: 20px;
+    }
   
   /*
 
@@ -25,5 +41,4 @@
     overflow: hidden;
     margin-bottom: 40px;
 }
-
   */
